# passcualito

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
passc/: commands.go  constants.go  crypto.go  data.go  data_test.go  encryptor.go  file.go  password.go  password_test.go  temp.go
pwd/enc/: main.go
src/: cli.rs  crypto.rs  main.rs  model.rs  password.rs  storage.rs
src/commands/: add.rs  mod.rs
src/core/: data.rs  encrypt.rs  mod.rs  password.rs
