[package]
name = "passcualito"
version = "0.1.0"
edition = "2024"
description = "Simple Command-Line Password Manager for Linux"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/passcualito"
homepage = "https://github.com/javiorfo/passcualito#readme"
keywords = ["password-manager", "password-store", "password-manager-linux"]

[[bin]]
name = "passc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "2.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.98"
rand = "0.9.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
